# golded-plus

./: .gitignore  .travis.yml  CMakeLists.txt  Config.def  GNUmakef.def  GNUmakef.inc  GNUmakef.lib  GNUmakef.prg  MSGBase.def  Makefile  README.md  appveyor.yml  dist-gpc.sh  dist-gpl.sh  dist-gps.sh  golded.vs2019.sln  golded.vs2022.sln  srcdate.h
golded/: gcarea.cpp  gccfgg.cpp  gccfgg.h  gccfgg2.cpp  gccfgg3.cpp  gccfgg4.cpp  gccfgg6.cpp  gccfgg7.cpp  gccfgg8.cpp  gckeys.h  gclang.cpp  gcmisc.cpp  gcprot.h  gealst.cpp  gearea.cpp  gecarb.cpp  gecfgg.h  gecmfd.cpp  gectrl.cpp  gedoit.cpp  gedoss.cpp  geedit.cpp  geedit.h  geedit2.cpp  geedit3.cpp  gefile.cpp  gefind.cpp  gefn.h  geglob.cpp  gehdre.cpp  gehtml.cpp  geinit.cpp  gekeys.h  gelang.h  geline.cpp  gelmsg.cpp  gemlst.cpp  gemnus.cpp  gemnus.h  gemrks.cpp  (+15 more)
golded3/: Makefile  gcalst.cpp  gcarea.cpp  gccfgg.cpp  gccfgg.h  gccfgg0.cpp  gccfgg1.cpp  gccfgg4.cpp  gclang.h  (+44 more)
goldlib/gcfg/: CMakeLists.txt  Makefile  gcfg.all  gedacfg.cpp  gedacfg.h  gs_fd.h  gs_ge120.h  gxareas.cpp  gxezy102.cpp  gxezy110.cpp  gxfd.cpp  gxfecho4.cpp  gxfecho5.cpp  gxfecho6.cpp  gxgecho.cpp  gxhpt.cpp  gxlora.cpp  gxmax3.cpp  gxqfront.cpp  gxspace.cpp
goldlib/gmb3/: CMakeLists.txt  Makefile  gmb3.all  gmo_msg.h  gmoezyc1.cpp  gmoezyc2.cpp  gmoezyc3.cpp  gmofido1.cpp  gmofido2.cpp  gmofido3.cpp  gmofido4.cpp  gmojamm.h  gmojamm1.cpp  gmojamm2.cpp  gmojamm3.cpp  gmojamm4.cpp  gmojamm5.cpp  gmoprot.h  gmosmb1.cpp  gmosmb2.cpp  gmosqsh1.cpp  gmosqsh2.cpp  gmosqsh3.cpp  gmosqsh4.cpp  gmowcat1.cpp  gmowcat2.cpp  gmowcat3.cpp  gmowcat4.cpp
(+87 files in other folders)
